Style and bug fixes for dark mode

--- a/src/style.scss
+++ b/src/style.scss
@@ -18,12 +18,12 @@ body.dark {
   --textLink: yellow;
   --hr: hsla(0, 0%, 100%, 0.2);
 
-  h1 {
+  h1, h2, h3, h4, h5, h6 {
     color: #fff;
   }
 
   a {
-    color: #e8007b;
+    color: #ff2677;
     text-shadow: none;
   }
 }
